# fedora-update-notifier

./: Cargo.toml  README.md
src/: main.rs
